# functional-cpp

./: .gitignore  CMakeLists.txt  flake.nix
example/: CMakeLists.txt  basic.cpp
include/functional-cpp/: core.hpp  tag_invoke.hpp
include/functional-cpp/datatypes/: optional.hpp  pointer.hpp
include/functional-cpp/detail/: forward.hpp  forward_like.hpp
include/functional-cpp/detail/type_traits/: delay.hpp  fold.hpp  is_specialization.hpp  take_n.hpp
include/functional-cpp/typeclasses/: functor.hpp
